# prima

./: .coveragerc  .gitignore  Python.gitignore  README.md  alsa-info.txt.ETbMMcbGmy  alsa-info.txt.We6rCSQ1Z8  alsa-info.txt.aKzopsc4Bk  app_psutil.py  first_time.setup  fix_dummy_ouput  history.pyhthon.vim  json_dt.py  llist.py  missing.fedora.30  perl_compile.pl  perllint.pl  self_call.pl  server_list  test.db  test_cli.py  test_disaster.py  test_sqllite.py  test_sth.py  test_to.py  tests.pl  todo  unittest.cfg
DirTree/: Changes  DirTree.pl  MANIFEST  Makefile.PL  README  ignore.txt  perl-DirTree.spec
advanced/: TODO  todo
advanced/zlib/xunit/: CMakeLists.txt  check_compress_xunit.c  check_proto.h  example_check.c  example_main.c
algebra/: two_vectors.py  vector.py
backup_and_recovery/: dir_tree.py  howto.make.boot.dvd  howto.make.boot.usb.clonezilla
c_tests/: README
c_tests/tests/: CMakeLists.txt  check_money.c
clone_backup/: clone_howto.txt  nt_passwd_howto.txt
cpp_tests/: CMakeLists.txt  DemoTest.h  README  tmp.cc
day1/: day1.expect
day2/: day2.expect
day3/: day3.expect
docs/: blackbox  howto.conda  howto.docker.install.fedora  howto.github  howto.html5.fedora  howto.md  howto.rpmbuild  howto.rsync  howto.vim  howto_vim.adoc  pattern_design
flask/: hello.py
foundation/: count_char.pl.stack  note  perl_howto  php_selenium.plan  plan  todo  yum.install  yum.repolist
foundation/boost_e3/test1/: CMakeLists.txt  mystringTest.cpp
foundation/boost_e3/test2/: CMakeLists.txt  mystringTest.cpp
foundation/c-orm/: CMakeLists.txt  Makefile.am  README  configure.ac  gitignore
foundation/c-orm/cgen/: Makefile.am  README.md  requirements.txt
foundation/c-orm/cgen/docs/: Doxyfile.in
foundation/c-orm/cgen/src/isti/cgen/: generate.py  parse.py  run.py
foundation/c-orm/cgen/src/isti/cgen/tests/: test_generate.py  test_parse.py
foundation/c-orm/clib/: Makefile.am  README.md
foundation/c-orm/clib/docs/: Doxyfile.in  Makefile.am
foundation/c-orm/clib/src/: CMakeLists.txt  Makefile.am  isti.h  isti_array.c  isti_array.h  isti_cond.c  isti_cond.h  isti_corm.h  isti_db.h  isti_flow.h  isti_ins.c  isti_ins.h  isti_log.c  isti_mem.c  isti_odbc.c  isti_odbc.h  isti_sql.c  isti_sql.h  isti_sqlite.c  isti_sqlite.h  isti_str.c
foundation/c-orm/clib/tests/: CMakeLists.txt  Makefile.am  check_array_foo.c  check_delete_foo.c  check_dynamic.c  check_foo.sh  check_insert_foo.c  check_isti_array.c  check_isti_cond.c  check_isti_ins.c  check_isti_log.c  check_isti_odbc.c  check_isti_odbc.sh  check_isti_odbc.sql  check_isti_sql.c  check_isti_sqlite.c  check_isti_sqlite.sh  check_isti_sqlite.sql  check_isti_str.c  check_select_foo.c  foo.h
foundation/c-orm/example/: build.sh
foundation/c-orm/example/src/: Makefile.am  phonebook.h  phonebook1.c  phonebook3.c
foundation/c-orm/play/: README.md
foundation/c-orm/play/src/: odbc-sqlite.c
foundation/c2/tests/: CMakeLists.txt  test_isti_str.c
foundation/c_check/tests/: CMakeLists.txt  check_money.c
foundation/check-devel-0.9.8/example/src/: CMakeLists.txt
foundation/check-devel-0.9.8/example/tests/: CMakeLists.txt
foundation/check_e3/tests/: CMakeLists.txt  test_main.c
foundation/check_e3/tests2/: CMakeLists.txt  README  test_add.c  test_main.c
foundation/cpp2/: CMakeLists.txt  DemoTest.cpp  README  TestA.cc  TestMain.cpp  cppunit_lite.cpp
foundation/cpp2/cov/: CMakeLists.txt  todo
foundation/cpp2/hello/: CMakeLists.txt  subarray.cc
foundation/cpp_gtest_boost/test_boost/test/: Addition_Test.cpp  CMakeLists.txt  Main_TestAll.cpp  Multiply_Test.cpp
foundation/cpp_math/: CMakeLists.txt  README.md
foundation/cpp_math/libmath/: Addition.cpp  Multiply.cpp
foundation/cpp_math/test_boost/: CMakeLists.txt
foundation/cpp_math/test_boost/test/: Addition_Test.cpp  CMakeLists.txt  Multiply_Test.cpp
foundation/cpp_math/test_gtest/test/: Addition_Test.cpp  CMakeLists.txt  Makefile
foundation/cppunit_e3/: CMakeLists.txt  README
foundation/cppunit_e3/test1/: CMakeLists.txt  str_cppunit_test.cpp
foundation/cppunit_e3/test2/: CMakeLists.txt  TestMain.cpp
foundation/cppunit_e3/test3/: CMakeLists.txt  mystringTest.cpp  mystringTestNew.cpp
foundation/cppunit_e3/test4/: CMakeLists.txt  TestMain.cpp  mystringTest.cpp
foundation/cppunit_e3/test5/: CMakeLists.txt  mystringTest.cpp
foundation/cppunit_e3/test6/: CMakeLists.txt  TestMain.cpp
foundation/cppunit_e3/test7/: CMakeLists.txt  mystringTest.cpp
foundation/cppunit_e3/test8/: CMakeLists.txt  TestMain.cpp  mystringTest.cpp  sort.cc
hooks_example/: pre-commit
kwargs/: readme
linear_algebra/: .vector.py.swp  vector.py
linux/: 1.stk  cmds  cofigure_vim8.py  configure_vim8.py  env.sh  exit_code.stk  fedora.install  file.sh  find.stk  find_hash_tag.sh  git.sh  git_https_request_failed.issue  howto.env.cron  howto_vim.adoc  input.txt  list.sh  nfs_cache.stk  nvidia_xorg.howto  overwrite.stk  parallel_processing_using_subshell.sh  pid_and_env.sh  pid_simple.sh  redmine.stk  rename.sh  rpminfo  set_env_and_process  ssh_passwordless_without_user  supervisord.stk  todo  vimrc_example.centos6.vim8  vimrc_example_fedora28.vundle
machine_learning/: howto  todo
nested_dict/: README  setup.py  xml_dict.py
nose_tests/: README.md  howto.coverage  nose2-junit.xml
perl_path/: test_path.pl
perl_tools/: 1  2.stk  cap.pl  capo.pl  cmds  csv2tsv.pl  env_get.pl  found.stk  howto  loop.pl  main.csv  make_path.pl  mini.pl  mini.py  mini2.py  mini3.py  mock.stk  qw_quote.txt  ref.pl  router.pl  router.pl.tdy  test.pl  test_which_subdir.t  tier.pl  tier.stk  utf8.pl  vlc.pl  vlc.pl.tdy  which_subdir.pl
pytests/: .coverage  ex0.py  gzip_test.py  setup.cfg  test_app.py  test_base.py  test_customize_report.py  test_ddt.py  test_ddt2.py  test_derived.py  test_ex1.py  test_flask.py  test_func.py  test_gzip.py  test_inheritance.py  (+12 more)
stackoverflow/: 1.stk  1.txt  2.stk  CMakeLists.txt  README  cmds  h2.pl.stack  module-starter.howto  parameter_wrapper.pl  perl_parameters  prep.pl  prep_v2.pl  remove_duplicate_email.stk  sort.java  svc.stk  syntax  todo
(+736 files in other folders)
